k8s/ingress/terrabia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terrabia-ingress
  namespace: terrabia
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, PATCH, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: terrabia.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: terra-proxy-service
            port:
              number: 8082
      - path: /eureka
        pathType: Prefix
        backend:
          service:
            name: terra-registry-service
            port:
              number: 8761
      - path: /config
        pathType: Prefix
        backend:
          service:
            name: terra-conf-service
            port:
              number: 8080
